<resources>
    <string name="generic_name">Name</string>
    <string name="generic_select_the_position">Select the position</string>
    <string name="generic_config">Config</string>
    <string name="generic_counters">Counters</string>
    <string name="generic_modify">Modify</string>
    <string name="item_event_desc_enabled_children">Enabled</string>
    <string name="item_event_desc_disabled_children">Disabled</string>
    <string name="item_image_condition_desc_threshold">%1$d%%</string>
    <string name="item_image_condition_desc_complete_threshold">Difference: %1$d%%</string>
    <string name="item_image_condition_visible">Visible</string>
    <string name="item_image_condition_not_visible">Not visible</string>
    <string name="item_counter_reached_title">On counter reached</string>
    <string name="item_counter_reached_desc">Verify the value of a counter modified by an Action</string>
    <string name="item_counter_reached_details">%1$s %2$s %3$s</string>
    <string name="item_timer_reached_title">On timer reached</string>
    <string name="item_timer_reached_desc">Fulfilled after a defined time from this trigger activation</string>
    <string name="item_timer_reached_details">%1$s after event is enabled</string>
    <string name="item_broadcast_received_title">On Broadcast received</string>
    <string name="item_broadcast_received_desc">Fulfilled when a Broadcast is received</string>
    <string name="item_broadcast_received_details">%1$s received</string>
    <string name="item_copy_title">Copy</string>
    <string name="item_copy_desc">Copy an existing Action from any Scenarios</string>
    <string name="item_click_title">Click</string>
    <string name="item_click_desc">Click somewhere on the screen</string>
    <string name="item_click_details_on_condition">During %1$s on %2$s</string>
    <string name="item_click_details_at_position">During %1$s</string>
    <string name="item_swipe_title">Swipe</string>
    <string name="item_swipe_desc">Swipe from a position on the screen to another</string>
    <string name="item_swipe_details">During %1$s</string>
    <string name="item_pause_title">Wait</string>
    <string name="item_pause_desc">Pause the detection execution</string>
    <string name="item_pause_details">During %1$s</string>
    <string name="item_change_counter_title">Change counter</string>
    <string name="item_change_counter_desc">Change a value to verify it later</string>
    <string name="item_change_counter_details">%1$s %2$s %3$s</string>
    <string name="item_change_counter_details_error">Counter is invalid</string>
    <string name="item_toggle_event_title">Change event state</string>
    <string name="item_toggle_event_desc">Change the enabled state of an event</string>
    <string name="item_toggle_event_details_enable_all">Enable all</string>
    <string name="item_toggle_event_details_disable_all">Disable all</string>
    <string name="item_toggle_event_details_invert_all">Invert all</string>
    <string name="item_toggle_event_details_manual">Change %1$d events</string>
    <string name="item_toggle_event_details_error">Target event not found</string>
    <string name="item_intent_title">Intent</string>
    <string name="item_intent_desc">Interact with another application</string>
    <string name="item_intent_details">Send %1$s</string>
    <string name="item_intent_details_component_name">Send %1$s to %2$s</string>
    <string name="item_intent_details_start_activity">Start %1$s</string>
    <string name="item_notification_title">Notification</string>
    <string name="item_notification_desc">Send a notification to your device</string>
    <string name="item_notification_details_text">Send \"%1$s\"</string>
    <string name="item_notification_details_counter">Send %1$s value</string>
    <string name="item_system_action_title">System action</string>
    <string name="item_system_action_desc">Use an Android system action (back, home or recent apps)</string>
    <string name="item_system_action_details_text">%1$s</string>
    <string name="item_set_text_title">Write text</string>
    <string name="item_set_text_desc">Write a text in the currently focused view</string>
    <string name="item_set_text_details_text">%1$s</string>
    <string name="item_set_text_details_text_empty">Clear text</string>
    <string name="search_view_hint_event_copy">Search by event name</string>
    <string name="search_view_hint_action_copy">Search by action name</string>
    <string name="search_view_hint_condition_copy">Search by condition name</string>
    <string name="list_header_copy_conditions_this">Conditions from this event</string>
    <string name="list_header_copy_conditions_all">Conditions from all events</string>
    <string name="list_header_copy_action_this">Actions from this event</string>
    <string name="list_header_copy_action_all">Actions from other events</string>
    <string name="list_header_copy_event_this">Events from this scenario</string>
    <string name="list_header_copy_event_all">Events from all scenarios</string>
    <string name="dialog_title_scenario_config">Scenario</string>
    <string name="message_empty_screen_event_title">No screen events !</string>
    <string name="message_empty_screen_event_desc">A screen event contains a set of actions executed when a specific condition is detected on the screen.\nYou need at least one screen or trigger event in your scenario to execute it.</string>
    <string name="message_empty_trigger_event_list_title">No trigger events !</string>
    <string name="message_empty_trigger_event_list_desc">A trigger event contains a set of actions executed when a set of custom conditions are met.\nYou need at least one screen or trigger event in your scenario to execute it.</string>
    <string name="menu_item_title_image_events">Screen</string>
    <string name="menu_item_title_trigger_events">Triggers</string>
    <string name="menu_item_title_more">More</string>
    <string name="field_scenario_keep_screen_on_title">Keep screen on</string>
    <string name="field_scenario_keep_screen_on_enabled">Keep the device screen on while detecting.</string>
    <string name="field_scenario_keep_screen_on_disabled">Use the normal device screen behaviour.</string>
    <string name="field_scenario_quality_title">Detection resolution</string>
    <string name="field_scenario_quality_description">To achieve faster detection, Klick\'r is downscaling the images before detecting.\n\nIf you increase the resolution, the detection will be slower, but more accurate. If you decrease the resolution, the detection will be faster, but less accurate. Find the good ratio between the detection resolution and the conditions thresholds to get the best of your scenarios!</string>
    <string name="field_scenario_quality_resolution" translatable="false">%1$d x %2$d</string>
    <string name="field_show_debug_view_title">Show debug view</string>
    <string name="item_title_debug_generate_report">Generate a report</string>
    <string name="field_show_debug_report_title">Show report</string>
    <string name="field_show_debug_report_desc_available">Debug report is available</string>
    <string name="field_show_debug_report_desc_not_available">No debug report available</string>
    <string name="field_tutorial_title">Tutorial</string>
    <string name="field_tutorial_desc">Learn how to use Klick\'r</string>
    <string name="dialog_title_image_event">Screen Event</string>
    <string name="dialog_title_trigger_event">Trigger</string>
    <string name="dialog_title_action_type">Action type</string>
    <string name="dialog_title_trigger_condition_type">Trigger type</string>
    <string name="field_condition_selector_desc">%1$d conditions</string>
    <string name="message_empty_screen_condition_list_title">No screen conditions !</string>
    <string name="message_empty_screen_condition_list_desc">A screen condition is a part of a screenshot that will be searched on each frames displayed by your phone screen.</string>
    <string name="message_empty_trigger_condition_list_title">No conditions !</string>
    <string name="message_empty_trigger_condition_list_desc">A condition is a custom criteria for starting an action.</string>
    <string name="message_empty_action_list_title">No actions !</string>
    <string name="message_empty_action_list_desc">An action is an interaction (click, swipe…) with your phone triggered when the created conditions are fulfilled.</string>
    <string name="menu_item_title_conditions">Conditions</string>
    <string name="menu_item_title_actions">Actions</string>
    <string name="field_event_state_title">State</string>
    <string name="field_event_state_desc_enabled">This event will be interpreted normally when playing the scenario</string>
    <string name="field_event_state_desc_disabled">This event needs to be enabled by an action to be interpreted when playing the scenario</string>
    <string name="field_event_keep_detecting_title">Keep executing</string>
    <string name="field_event_keep_detecting_desc_enabled">When this Event is triggered, continue the execution from the next event on the list</string>
    <string name="field_event_keep_detecting_desc_disabled">When this Event is triggered, restart the execution from the first event on the list</string>
    <string name="field_operator_title">Operator</string>
    <string name="field_operator_desc_or">Only one condition must be fulfilled to trigger the actions</string>
    <string name="field_operator_desc_and">All conditions must be fulfilled to trigger the actions</string>
    <string name="brief_empty_actions">No Actions. You need at least one Action to create a valid Event</string>
    <string name="brief_empty_image_conditions">No Screen Condition. You need at least one Condition to create a valid Event</string>
    <string name="dialog_title_condition_config">Condition</string>
    <string name="field_condition_visibility_title">Visibility</string>
    <string name="field_condition_visibility_desc_present">The condition must be detected</string>
    <string name="field_condition_visibility_desc_absent">The condition must not be detected</string>
    <string name="field_detection_type_title">Detection type</string>
    <string name="field_detection_type_desc_exact">Detection at the captured position</string>
    <string name="field_detection_type_desc_screen">Detection on the whole screen</string>
    <string name="field_detection_type_desc_area">Detection on a selected area</string>
    <string name="field_select_detection_area_title">Detection Area</string>
    <string name="field_select_detection_area_desc">In [%1$d, %2$d, %3$d, %4$d]</string>
    <string name="field_title_condition_threshold">Tolerated difference</string>
    <string name="dialog_title_counter_reached">Counter value</string>
    <string name="field_counter_name_label">Counter name</string>
    <string name="field_counter_comparison_value_label">Value</string>
    <string name="dropdown_comparison_operator_label">Operator</string>
    <string name="dialog_title_timer_reached">Timer reached</string>
    <string name="input_field_label_timer_duration_no_unit">After</string>
    <string name="field_timer_restart_title">Restart when reached</string>
    <string name="field_timer_restart_desc_on">Once reached, the timer will restart, allowing this condition to be fulfilled again</string>
    <string name="item_time_of_day_daily">Todo dia</string>
    <string name="input_field_label_time_hour">Hora (0-23)</string>
    <string name="item_time_of_day_title">Quando o horário for atingido</string>
    <string name="item_time_of_day_days_of_week">Dias da semana</string>
    <string name="day_mon">Seg</string>
    <string name="day_tue">Ter</string>
    <string name="day_wed">Qua</string>
    <string name="day_thu">Qui</string>
    <string name="day_fri">Sex</string>
    <string name="day_sat">Sáb</string>
    <string name="day_sun">Dom</string>
</resources>